# prune

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Pipfile  README.md  build_docker.bash  docker_attach_firstcontainer.bash  environment.yml  launch_rviz.bash  main.py  play_rosbag.bash  pyproject.toml  requirements.txt  run_docker.bash  setup.bash  setup.py  train.py  train_rm_points_based.py
.devcontainer/: Dockerfile  devcontainer.json
config/: config_point_based.yaml  prune_config.rviz  setting.yaml  tf.json
data/: preprocess_scand_a_chop.py  split_preferences.py
datasets/: dataloader_points_based.py  preprocess_scand_a_chop.py
deployment/: camera_matrix.json
deployment/config/: models.yaml
losses/: __init__.py  loss_fn.py
models/: fusion_block.py  reward_model_point_based.py  rope.py  trajectory_transformer.py  trajectory_transformer_block.py
scripts/: dino_scratch.py  path_dino_result.py  points_based_rm.sbatch  train_rm_points_based.sbatch
src/: __init__.py  bev_transform.py  chop_dataloader.py  chop_dataloader_points_based.py  inference_point_based.py  loss_fn.py  preprocess_scand_a_chop.py  reward_model.py  scand_visualize.py  train.py  train_rm_points_based.py  wandb_sweep.py
tests/: test_loss_fn.py
utils/: torch_geometry.py  traj_utils.py  vis_utils.py
visualization/: scand_visualize.py
