[project]
name = "prune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "matplotlib>=3.10.8",
    "mslk>=0.0.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-image>=0.25.2",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchao>=0.16.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "datasets",
    "datasets.*",
    "losses",
    "losses.*",
    "models",
    "models.*",
    "src",
    "src.*",
    "utils",
    "utils.*",
]
