[project]
name = "prune"
version = "0.1.0"
description = "VLA alignment project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.37.0",
    "efficientnet-pytorch>=0.7.1",
    "einops>=0.8.2",
    "matplotlib>=3.10.8",
    "mslk>=0.0.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-image>=0.25.2",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchao>=0.16.0",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.0",
    "wandb>=0.25.0",
    "depth-anything-v2",
    "diffusion-policy",
    "vit-pytorch>=1.18.0",
    "scipy-stubs~=1.15.3",
]

[tool.uv.sources]
depth-anything-v2 = { git = "ssh://git@github.com/debOliveira/depth-anything-V2.git", rev = "main" }
diffusion-policy = { git = "ssh://git@github.com/debOliveira/diffusion_policy.git", rev = "main" }

